--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@sanity/client": "^3.4.1",
+    "autoprefixer": "^10.4.13",
     "next": "13.1.1",
+    "postcss": "^8.4.20",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.4"
   }
 }
