--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@next/font": "13.1.1",
     "@sanity/client": "^3.4.1",
     "autoprefixer": "^10.4.13",
+    "framer-motion": "^8.0.2",
     "next": "13.1.1",
     "postcss": "^8.4.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "tailwindcss": "^3.2.4"
   }
 }
