--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "autoprefixer": "^10.4.13",
     "framer-motion": "^8.0.2",
     "next": "13.1.1",
